--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "lib": ["es2017", "es7", "es6", "dom"],
         "declaration": true,
-        "outDir": "/",
+        "outDir": "../add-query-params-to-url/",
         "strict": true,
         "esModuleInterop": true
     },
